fix: hide scrollbars

--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
 }
 
 /* Normalize CSS */
+::-webkit-scrollbar {
+  display: none;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -67,7 +71,6 @@ a {
 
 .section {
   width: 100%;
-  height: 100vh;
   padding: 60px 0;
 }
 
@@ -122,15 +125,15 @@ a {
 }
 
 /* Scroll styles */
-main {
+.main {
   scroll-snap-type: y mandatory;
   overflow: scroll;
-  height: 103vh;
+  height: 100vh;
   width: 100%;
   -webkit-overflow-scrolling: touch;
 }
 
-section {
+.section {
   /* opacity: 0.5; */
   z-index: 5;
   scroll-snap-align: center;
